--- a/index.html
+++ b/index.html
@@ -20,218 +20,218 @@
     <div class="student-list" data-student-id="2">
       <h2>고정우</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="3">
       <h2>곽찬주</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="4">
       <h2>권준서</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="5">
       <h2>김기민</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="6">
       <h2>김은섭</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="7">
       <h2>김지후</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="8">
       <h2>박민규</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="9">
       <h2>박정원</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="10">
       <h2>배준후</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="11">
       <h2>백승찬</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="12">
       <h2>서준영</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="13">
       <h2>송시욱</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="14">
       <h2>신경용</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="15">
       <h2>신이정</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="16">
       <h2>신정현</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="17">
       <h2>신정훈</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="18">
       <h2>유재헌</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="19">
       <h2>윤요한</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="20">
       <h2>이건희</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="21">
       <h2>이경훈</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="22">
       <h2>이승찬</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="23">
       <h2>이재원</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="24">
       <h2>이정민</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="25">
       <h2>이현호</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="26">
       <h2>임채원</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="27">
       <h2>장우혁</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="28">
       <h2>정상빈</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="29">
       <h2>정선균</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="30">
       <h2>정승호</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="31">
       <h2>정용규</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="32">
       <h2>정진오</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="33">
       <h2>조우성</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="34">
       <h2>한영우</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="35">
       <h2>허준성</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="36">
       <h2>홍정우</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
     <div class="student-list" data-student-id="37">
       <h2>황지훈</h2>
       <p>점수: <span class="score">0</span></p>
-      <button class="add-score">Add</button>
-      <button class="subtract-score">Subtract</button>
+      <button class="add-score">50점</button>
+      <button class="subtract-score">-50점</button>
     </div>
   <script src="index.js"></script>
 </body>
